<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shop Shoes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="Account">Account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="account_or_password_is_incorrect">Account or password is incorrect</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="unknow_error">Unknow Error</string>
    <string name="sign_in_fail">Sign In Fail</string>
    <string name="please_enter_enough_information">Please enter enough information</string>
    <string name="if_you_already_have_an_account">If you already have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_in_later">Sign in later</string>
    <string name="become_a_member">Welcome!</string>
    <string name="account_information">Account information</string>
    <string name="my_cart">My Cart</string>
    <string name="my_reviews">My Rating</string>
    <string name="log_out">Log Out</string>
    <string name="support">Support</string>
    <string name="welcome">Welcome</string>
    <string name="we_will_support_you_as_soon_as_possible">We will support you as soon as possible</string>
    <string name="email_feedback">daongocanh20052002@gmail.com</string>
    <string name="no_mail_found">No mail found</string>
    <string name="error_can_not_send">ERROR: can not send</string>
    <string name="change_password">Change password</string>
    <string name="get_info_fail">Get info fail</string>
    <string name="account_is_not_exists">Account is not exists</string>
    <string name="go_to_back">Go to back</string>
    <string name="address">Address</string>
    <string name="sign_up_success">Resigter success</string>
    <string name="register_error">Register error</string>
    <string name="enter_your_product_name">Enter your product name...</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="description">Description</string>
    <string name="product_reviews">Product reviews</string>
    <string name="there_are_current">There are currently no reviews</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="purchase">Purchase</string>
    <string name="total">"Total: "</string>
    <string name="quality">"Quality: "</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_cart_fail">Add cart fail. Try again!</string>
    <string name="item_add_to_cart">Item added to cart!</string>
    <string name="you_must_login_to_see_your_cart">You must login to see your cart!!</string>
    <string name="cart_is_updated">Cart is updated!</string>
    <string name="update_cart_fail">Update cart failed! Try gain!!</string>
    <string name="delete">Detete</string>
    <string name="delete_success">Delete success!</string>
    <string name="delete_fail">Delete fail! Try again!</string>
    <string name="show_password">Show password</string>
    <string name="something_wrong">Something wrong. Try again!</string>
    <string name="change">Change</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="please_enter_different_values">Please enter different values</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="state">State</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="zipcode">ZipCode</string>
    <string name="enter_your_zipcode">Enter your ZipCode</string>
    <string name="buy">Buy</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="change_information">Change Information</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="detail">Detail</string>
    <string name="detail_history">Detail History</string>
    <string name="top_rate">Top Rate</string>
    <string name="top_new">Top New</string>
</resources>