<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_text_pink"
        android:drawableStart="@drawable/address"
        android:drawablePadding="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_text_black"
            android:drawablePadding="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/tvBuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_text_pink"
            android:drawablePadding="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llBot"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/first_name"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_first_name"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/last_name"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_last_name"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/phone_number"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_phone_number"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/address"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_address"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/city"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_city"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/state"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_state"
                android:padding="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/zipcode"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_search"
                android:hint="@string/enter_your_zipcode"
                android:padding="@dimen/_16sdp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>