<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    android:background="@drawable/bg_search"
    android:elevation="@dimen/_16sdp"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status"
            android:textColor="@color/color_text_pink"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/bg_btn"
        android:elevation="@dimen/_8sdp"
        android:text="@string/detail"
        android:textColor="@color/white" />
</LinearLayout>